[package]
name = "whichlang-rb"
version = "0.1.0"
authors = ["Ben D'Angelo <ben@bendangelo.me>", "Kitaiti Makoto <KitaitiMakoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rutie = { version = "0.9.0", features = ["no-link"] }
whichlang = "0.1.0"

[lib]
crate-type = ["cdylib"]
